fixed error where cards were not showing as selected

--- a/sets-frontend/src/Components/Game/GameCard.css
+++ b/sets-frontend/src/Components/Game/GameCard.css
@@ -1,5 +1,6 @@
 .GameCard:hover{
   cursor:pointer;
+  border: 5px solid #4cc9f0;
 }
 
 .GameCard{
@@ -7,6 +8,8 @@
   display: flex;
   align-items: center;
   flex-wrap: wrap;
+  border: 5px solid transparent;
+
 }
 
 .GameCard-shape {
